# daq-interface-26

./: .gitignore  .vercelignore  NFR26DBC.csv  README.md  main.js  package-lock.json  package.json  preload.js  supabase_functions.sql  vercel.json
app/: index.html  (+4 more)
parser/: NFR26CANDBC.csv  README.md  __main__.py  batch.py  build.ps1  build.sh  compile.py  db.py  decode.py  file_source.py  graphSignals.ipynb  live.py  main.py  nfr_reader.py  protocol.py  pyproject.toml  serial_source.py  signalSpec.py  upload.py
parser/testData/2-13-26/: ._LOG_0004.NFR  ._LOG_0006.NFR  ._LOG_0009.NFR  LOG_0010.NFR  LOG_0013.NFR  LOG_0020.NFR  LOG_0032.NFR
parser/testData/2-14-26/: LOG_0001.NFR  LOG_0003.NFR  LOG_0009.NFR  LOG_0013.NFR  LOG_0014.NFR  LOG_0015.NFR  LOG_0023.NFR  LOG_0027.NFR  LOG_0035.NFR  LOG_0041.NFR
parser/testData/2-15-26/: LOG_0004.NFR  LOG_0022.NFR  LOG_0029.NFR  LOG_0033.NFR
parser/testData/2-16-26/: LOG_0001.NFR
parser/testData/2-18-26/: LOG_0003.NFR  LOG_0010.NFR  LOG_0015.NFR  LOG_0016.NFR  LOG_0021.NFR  LOG_0037.NFR  LOG_0038.NFR  LOG_0046.NFR  LOG_0052.NFR  LOG_0054.NFR  LOG_0056.NFR  LOG_0057.NFR  LOG_0068.NFR  LOG_0071.NFR  LOG_0077.NFR  LOG_0081.NFR  LOG_0083.NFR  LOG_0084.NFR  LOG_0085.NFR  LOG_0087.NFR  LOG_0089.NFR  LOG_0095.NFR  LOG_0096.NFR  LOG_0105.NFR  LOG_0110.NFR  LOG_0114.NFR  LOG_0115.NFR  LOG_0120.NFR  LOG_0126.NFR  LOG_0129.NFR  LOG_0137.NFR
parser/tests/: conftest.py  test_batch.py  test_db.py  test_file_source.py  test_harness.py  test_live.py  test_nfr_reader.py  test_protocol.py  test_replay_integration.py  test_serial_source.py
(+1103 files in other folders)
